--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>DivarNet</title>
   </head>
-  <body>
+  <body style="padding: 40px;">
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
